feat(productInventory): add price modification capabilities
* Fixed issue with fiscal registration